--- a/data/users.yml
+++ b/data/users.yml
@@ -1,4 +1,4 @@
-- name: 'Sébastien Saunier'
-  github_nickname: 'ssaunier'
-- name: 'Boris Paillard'
-  github_nickname: 'Papillard'
+- name: 'Leila Novira'
+  github_nickname: 'layloww'
+- name: 'Yasmina Benchekroun'
+  github_nickname: 'benchey'
